traces/bug_37.txt
#37
kv_engine/engines/ep/src/checkpoint_manager.cc:259: error: Deadlock
  Potential self deadlock. `CheckpointManager::registerCursorBySeqno` locks `&(this->queueLock)` in `class CheckpointManager` twice.

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: In method `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->queueLock)` in `class CheckpointManager`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->queueLock)` in `class CheckpointManager`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
